Add camera following player

--- a/data/level_data.yaml
+++ b/data/level_data.yaml
@@ -4,7 +4,7 @@ levels:
     - "W        W"
     - "W P   B  W"
     - "W       XW"
-    - "WWWWWWWWWW"   
+    - "WWWWWWWWWW"
   2:
     - "WWWWW   WWWW"
     - "WX PW   W XW"
@@ -12,3 +12,89 @@ levels:
     - "W        B W"
     - "WWWWWWWW   W"
     - "       WWWWW"
+  3:
+    - "WWWWWWWWWWWWW"
+    - "W     W     W"
+    - "W  B  W  B  W"
+    - "W  P  W  X  W"
+    - "W     W     W"
+    - "WWWWWWW WWWWW"
+    - "W   X       W"
+    - "W           W"
+    - "WWWWWWWWWWWWW"
+  4:
+    - "WWWWWWWWWWWWWW"
+    - "W P        X W"
+    - "W  WW WWWWWW W"
+    - "W    B       W"
+    - "W WX W       W"
+    - "W    W       W"
+    - "W W WWWWWWW  W"
+    - "W W  B W X   W"
+    - "W W          W"
+    - "WWWWWWWWWWWWWW"
+  5:
+    - "WWWWWWWWWWWWWW"
+    - "W P     W    W"
+    - "W WWW W W WW W"
+    - "W W B W X B W W"
+    - "W W   W   W W W"
+    - "W WW WWW WW WW"
+    - "W   X        W"
+    - "WWWWWWWWWWWWWW"
+  6:
+    - "WWWWWWWWWWWWWW"
+    - "W   X   P    W"
+    - "W WWWW WWW W W"
+    - "W W  B W  B  W"
+    - "W W WW WW WW W"
+    - "W W  X W     W"
+    - "W W WWWW WWWWW"
+    - "W W          W"
+    - "WWWWWWWWWWWWWW"
+  7:
+    - "WWWWWWWWWWWWWW"
+    - "W P          W"
+    - "W WWWW WWWWW W"
+    - "W W  B W  B  W"
+    - "W W WW W XX W W"
+    - "W W    W  W W W"
+    - "W WW WWW WW W W"
+    - "W    X     X  W"
+    - "WWWWWWWWWWWWWW"
+  8:
+    - "WWWWWWWWWWWWWW"
+    - "W   X     P  W"
+    - "W WWWW WWWWWW W"
+    - "W W  B W  B  W"
+    - "W W WW W XX W W"
+    - "W W    W  W W W"
+    - "W WW WWW WW W W"
+    - "W    X     X  W"
+    - "W WWWWWWWWWW WW"
+    - "W             W"
+    - "WWWWWWWWWWWWWWW"
+  9:
+    - "WWWWWWWWWWWWWW"
+    - "W     P   X  W"
+    - "W WWWW WWWWWW W"
+    - "W W  B W  B  W"
+    - "W W WW W XX W W"
+    - "W W    W  W W W"
+    - "W WW WWW WW W W"
+    - "W   X  B   X  W"
+    - "W WWWW WWWWWWW W"
+    - "W            W W"
+    - "WWWWWWWWWWWWWWWW"
+  10:
+    - "WWWWWWWWWWWWWWWW"
+    - "W     X  P     W"
+    - "W WWWW WWWWWW  W"
+    - "W W  B W  B   WW"
+    - "W W WW W XX W  W"
+    - "W W    W  W WW W"
+    - "W WW WWW WW W  W"
+    - "W    X  B   X WW"
+    - "W WWWW WWWWWWWWW"
+    - "W             W"
+    - "WWWWWWWWWWWWWWW"
