--- a/data/textures.yaml
+++ b/data/textures.yaml
@@ -7,7 +7,12 @@ textures:
   wall_corner: wall_corner.png
   box: box.png
   target: dest.png
+  
+  main_title: title.png
     
   play_button: play_btn.png
   exit_button: exit_btn.png
+  back_button: back_btn.png
+  resume_button: resume_btn.png
+  restart_button: restart_btn.png
     
