Finish wall side logic

--- a/data/level_data.yaml
+++ b/data/level_data.yaml
@@ -6,21 +6,21 @@ levels:
     - "W       XW"
     - "WWWWWWWWWW"
   2:
-    - "WWWWW   WWWW"
-    - "WX PW   W XW"
+    - "WWWWW---WWWW"
+    - "WX PW---W XW"
     - "WB  WWWWW  W"
     - "W        B W"
     - "WWWWWWWW   W"
-    - "       WWWWW"
+    - "-------WWWWW"
   3:
-    - "WWWWWWWWWWWWW"
-    - "W     W     W"
-    - "W  B  W  B  W"
-    - "W  P  W  X  W"
-    - "W     W     W"
-    - "WWWWWWW WWWWW"
+    - "WWWWWWWWWW---"
+    - "W        WWWW"
+    - "W  B  W     W"
+    - "W  PW BW X  W"
+    - "W      W    W"
+    - "WWWWWWWW WW W"
     - "W   X       W"
-    - "W           W"
+    - "W      WW   W"
     - "WWWWWWWWWWWWW"
   4:
     - "WWWWWWWWWWWWWW"
